--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       padding:20px;margin-top:30px
     }
 
-    /* >>> Your two requested background tweaks <<< */
+    /* >>> Your requested background tweaks <<< */
     /* About Us = white block with thin dividers */
     #about{
       background:#fff;
@@ -167,18 +167,54 @@
       border-top:1px solid var(--stroke);
       border-bottom:1px solid var(--stroke);
     }
+
+    /* ==== Scroll reveal animations (no library) ==== */
+    .reveal{opacity:0; transform:translateY(24px); transition:opacity .7s ease, transform .7s ease;}
+    .reveal.in{opacity:1; transform:none;}
+
+    .reveal.fade-up{transform:translateY(24px);}
+    .reveal.fade-down{transform:translateY(-24px);}
+    .reveal.fade-left{transform:translateX(-28px);}
+    .reveal.fade-right{transform:translateX(28px);}
+
+    /* Staggered children for grids/cards */
+    .reveal-stagger > *{
+      opacity:0; transform:translateY(18px);
+      transition:opacity .6s ease, transform .6s ease;
+    }
+    .reveal-stagger.in > *{
+      opacity:1; transform:none;
+    }
+    .reveal-stagger.in > *:nth-child(1){ transition-delay: .05s; }
+    .reveal-stagger.in > *:nth-child(2){ transition-delay: .12s; }
+    .reveal-stagger.in > *:nth-child(3){ transition-delay: .18s; }
+    .reveal-stagger.in > *:nth-child(4){ transition-delay: .24s; }
+    .reveal-stagger.in > *:nth-child(5){ transition-delay: .30s; }
+    .reveal-stagger.in > *:nth-child(6){ transition-delay: .36s; }
+    .reveal-stagger.in > *:nth-child(7){ transition-delay: .42s; }
+    .reveal-stagger.in > *:nth-child(8){ transition-delay: .48s; }
+    .reveal-stagger.in > *:nth-child(9){ transition-delay: .54s; }
+
+    /* Respect reduced motion */
+    @media (prefers-reduced-motion: reduce){
+      .reveal, .reveal-stagger > *{
+        transition: none !important;
+        opacity: 1 !important;
+        transform: none !important;
+      }
+    }
   </style>
 </head>
 <body>
 
-  <!-- Header -->
+  <!-- Header (no animation) -->
   <header>
     <img src="logo.svg" alt="CrystalCore Business Solutions Logo" class="logo">
     <h1>CrystalCore Business Solutions (CCBS)</h1>
     <p>Your strategic partner in clarity, precision, and innovation</p>
   </header>
 
-  <!-- Nav -->
+  <!-- Nav (no animation) -->
   <nav>
     <a href="#about">About</a>
     <a href="#services">Services</a>
@@ -187,8 +223,8 @@
     <a href="#contact">Contact</a>
   </nav>
 
-  <!-- About (white block with thin dividers) -->
-  <section id="about">
+  <!-- About (white block + fade-up) -->
+  <section id="about" class="reveal fade-up">
     <div class="container">
       <h2>About Us</h2>
       <p class="lead">
@@ -209,17 +245,16 @@
     </div>
   </section>
 
-  <!-- Services (A → Z; Digital Marketing card replaced with your new text) -->
-  <section id="services">
+  <!-- Services (title fade-right, grid stagger) -->
+  <section id="services" class="reveal">
     <div class="container">
-      <h2>Our Services</h2>
-      <div class="grid">
+      <h2 class="reveal fade-right">Our Services</h2>
+      <div class="grid reveal-stagger">
         <div class="card"><h3>🔍 Business Analysis & Planning</h3><ul><li>Planning & monitoring</li><li>BRD / FRD / SRS documentation</li><li>Business health check-up</li></ul></div>
         <div class="card"><h3>🔄 Business Transformation</h3><ul><li>Transformation roadmaps</li><li>Change management</li><li>Process re-engineering</li></ul></div>
         <div class="card"><h3>📑 Compliance & Documentation</h3><ul><li>MSME & GST guidance</li><li>Certification & regulatory support</li></ul></div>
         <div class="card"><h3>📉 Data Analysis</h3><ul><li>Dashboards & insights</li><li>Data cleansing</li></ul></div>
         <div class="card"><h3>💻 Digital & IT Consulting</h3><ul><li>Digital strategy</li><li>CRM & ERP implementation</li><li>Workflow automation</li></ul></div>
-        <!-- REPLACED CARD -->
         <div class="card">
           <h3>📣 Digital Marketing & Online Visibility</h3>
           <ul>
@@ -235,8 +270,8 @@
     </div>
   </section>
 
-  <!-- Why Choose Us (light gray highlight) -->
-  <section id="why">
+  <!-- Why Choose Us (light gray + fade-up) -->
+  <section id="why" class="reveal fade-up">
     <div class="container">
       <h2>Why Choose Us</h2>
       <p class="lead">We are more than consultants — we are your growth partners. Businesses choose us because we deliver:</p>
@@ -252,8 +287,8 @@
     </div>
   </section>
 
-  <!-- Client Information & Service Request (compact) -->
-  <section id="request">
+  <!-- Client Information & Service Request (fade-left) -->
+  <section id="request" class="reveal fade-left">
     <div class="container">
       <div class="form-card">
         <h3>Client Information & Service Request</h3>
@@ -287,8 +322,8 @@
     </div>
   </section>
 
-  <!-- Contact -->
-  <section id="contact">
+  <!-- Contact (fade-up) -->
+  <section id="contact" class="reveal fade-up">
     <div class="container" style="text-align:center;">
       <h2>Contact Us</h2>
       <p class="lead">
@@ -298,27 +333,24 @@
       <p class="lead">📞💬 Need help? Connect with us — 24/7 support via call & chat.</p>
 
       <div class="socials">
-        <!-- Instagram -->
-        <a href="#" title="Instagram" aria-label="Instagram">
-          <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7zm5 3.5a5.5 5.5 0 1 1 0 11 5.5 5.5 0 0 1 0-11zm0 2a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zM18 6.5a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>
-        </a>
-        <!-- Facebook -->
-        <a href="#" title="Facebook" aria-label="Facebook">
-          <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M22 12a10 10 0 1 0-11.6 9.9v-7h-2.4V12h2.4V9.7c0-2.4 1.4-3.7 3.6-3.7 1 0 2 .2 2 .2v2.2h-1.1c-1.1 0-1.5.7-1.5 1.4V12h2.6l-.4 2.9h-2.2v7A10 10 0 0 0 22 12"/></svg>
-        </a>
-        <!-- WhatsApp -->
-        <a href="#" title="WhatsApp" aria-label="WhatsApp">
+        <!-- WhatsApp (direct chat) -->
+        <a href="https://wa.me/919840407627?text=Hi%20CrystalCore%2C%20I%27d%20like%20to%20know%20more%20about%20your%20services."
+           title="WhatsApp" aria-label="WhatsApp" target="_blank" rel="noopener">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M20 3.9A10 10 0 0 0 3.4 17.4L2 22l4.7-1.2A10 10 0 1 0 20 3.9ZM12 20a8 8 0 1 1 0-16 8 8 0 0 1 0 16Zm4-5.7c-.2-.1-1-.5-1.1-.6s-.3-.1-.5.1c-.1.2-.6.6-.7.7-.1.1-.3.1-.5 0s-1-.4-1.9-1.2-1.4-1.8-1.5-2c-.1-.2 0-.3.1-.5l.3-.3c.1-.1.1-.2.2-.3.1-.1.1-.2.2-.3 0-.1 0-.2 0-.3s0-.3-.1-.4c0-.1-.5-1.2-.7-1.7-.2-.5-.4-.4-.5-.4h-.4c-.1 0-.3.1-.5.2-.2.2-.6.6-.6 1.4s.6 1.6.7 1.7c.1.2 1.2 1.9 2.8 3 1.6 1.1 2.7 1.3 3.1 1.4.4 0 .9 0 1.2-.1.3-.1 1-.5 1.1-.9.1-.4.1-.8.1-.9 0-.1-.2-.1-.4-.2Z"/></svg>
         </a>
+        <!-- Instagram -->
+        <a href="https://www.instagram.com/yourhandle/" title="Instagram" aria-label="Instagram" target="_blank" rel="noopener">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7zm5 3.5a5.5 5.5 0 1 1 0 11 5.5 5.5 0 0 1 0-11zm0 2a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zM18 6.5a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>
+        </a>
         <!-- LinkedIn -->
-        <a href="#" title="LinkedIn" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/company/your-company-slug/" title="LinkedIn" aria-label="LinkedIn" target="_blank" rel="noopener">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M6.94 8.75H4.06V20h2.88V8.75Zm.2-4.6a1.78 1.78 0 1 1-3.56 0 1.78 1.78 0 0 1 3.56 0ZM20 13.9c0-3.02-1.61-4.42-3.76-4.42-1.73 0-2.5.95-2.94 1.62V8.75H10.5c.04.95 0 11.25 0 11.25h2.8v-6.28c0-.34.02-.69.13-.93.29-.69.95-1.41 2.06-1.41 1.45 0 2.03 1.06 2.03 2.62V20H20v-6.1Z"/></svg>
         </a>
       </div>
     </div>
   </section>
 
-  <!-- Footer -->
+  <!-- Footer (no animation) -->
   <footer>
     © 2025 CrystalCore Business Solutions — All Rights Reserved
   </footer>
@@ -351,6 +383,19 @@
         resp.textContent = "❌ Error submitting. Please try again.";
       }
     });
+
+    // ==== IntersectionObserver animations ====
+    const revealEls = document.querySelectorAll('.reveal, .reveal-stagger');
+    const io = new IntersectionObserver((entries, observer)=>{
+      entries.forEach(entry=>{
+        if(entry.isIntersecting){
+          entry.target.classList.add('in');
+          observer.unobserve(entry.target);
+        }
+      });
+    }, { threshold: 0.15 });
+
+    revealEls.forEach(el => io.observe(el));
   </script>
 </body>
 </html>
