--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       --card:#FFFFFF;
       --stroke:#E9E9EF;
       --shadow:0 8px 20px rgba(16,24,40,.08);
-      --soft:#FAFAFD; /* very light gray for highlight sections */
+      --soft:#FAFAFD;
     }
 
     *{box-sizing:border-box}
@@ -99,13 +99,13 @@
     .why-list li{margin:8px 0}
     .why-list strong{color:var(--purple)}
 
-    /* Request Form (compact, fits neatly inside card) */
+    /* Request Form */
     .form-card{
       background:var(--card);
       border:1px solid var(--stroke);
       border-radius:14px;
       box-shadow:var(--shadow);
-      padding:28px;               /* more inner space so fields don't touch edges */
+      padding:28px;
       max-width:560px;
       margin:0 auto;
     }
@@ -117,7 +117,7 @@
       width:100%;
       padding:10px 12px;
       border:1px solid #ccc;
-      border-radius:10px;         /* slightly smaller than card radius for visual fit */
+      border-radius:10px;
       font-size:15px;
       background:#fff;
     }
@@ -154,37 +154,27 @@
       padding:20px;margin-top:30px
     }
 
-    /* >>> Your requested background tweaks <<< */
-    /* About Us = white block with thin dividers */
+    /* Background tweaks */
     #about{
       background:#fff;
       border-top:1px solid var(--stroke);
       border-bottom:1px solid var(--stroke);
     }
-    /* Why Choose Us = soft light-gray highlight */
     #why{
       background:var(--soft);
       border-top:1px solid var(--stroke);
       border-bottom:1px solid var(--stroke);
     }
 
-    /* ==== Scroll reveal animations (no library) ==== */
+    /* Scroll reveal animations */
     .reveal{opacity:0; transform:translateY(24px); transition:opacity .7s ease, transform .7s ease;}
     .reveal.in{opacity:1; transform:none;}
-
     .reveal.fade-up{transform:translateY(24px);}
     .reveal.fade-down{transform:translateY(-24px);}
     .reveal.fade-left{transform:translateX(-28px);}
     .reveal.fade-right{transform:translateX(28px);}
-
-    /* Staggered children for grids/cards */
-    .reveal-stagger > *{
-      opacity:0; transform:translateY(18px);
-      transition:opacity .6s ease, transform .6s ease;
-    }
-    .reveal-stagger.in > *{
-      opacity:1; transform:none;
-    }
+    .reveal-stagger > *{opacity:0; transform:translateY(18px); transition:opacity .6s ease, transform .6s ease;}
+    .reveal-stagger.in > *{opacity:1; transform:none;}
     .reveal-stagger.in > *:nth-child(1){ transition-delay: .05s; }
     .reveal-stagger.in > *:nth-child(2){ transition-delay: .12s; }
     .reveal-stagger.in > *:nth-child(3){ transition-delay: .18s; }
@@ -194,27 +184,21 @@
     .reveal-stagger.in > *:nth-child(7){ transition-delay: .42s; }
     .reveal-stagger.in > *:nth-child(8){ transition-delay: .48s; }
     .reveal-stagger.in > *:nth-child(9){ transition-delay: .54s; }
-
-    /* Respect reduced motion */
     @media (prefers-reduced-motion: reduce){
-      .reveal, .reveal-stagger > *{
-        transition: none !important;
-        opacity: 1 !important;
-        transform: none !important;
-      }
+      .reveal, .reveal-stagger > *{ transition: none !important; opacity: 1 !important; transform: none !important; }
     }
   </style>
 </head>
 <body>
 
-  <!-- Header (no animation) -->
+  <!-- Header -->
   <header>
     <img src="logo.svg" alt="CrystalCore Business Solutions Logo" class="logo">
     <h1>CrystalCore Business Solutions (CCBS)</h1>
     <p>Your strategic partner in clarity, precision, and innovation</p>
   </header>
 
-  <!-- Nav (no animation) -->
+  <!-- Nav -->
   <nav>
     <a href="#about">About</a>
     <a href="#services">Services</a>
@@ -223,7 +207,7 @@
     <a href="#contact">Contact</a>
   </nav>
 
-  <!-- About (white block + fade-up) -->
+  <!-- About -->
   <section id="about" class="reveal fade-up">
     <div class="container">
       <h2>About Us</h2>
@@ -245,7 +229,7 @@
     </div>
   </section>
 
-  <!-- Services (title fade-right, grid stagger) -->
+  <!-- Services -->
   <section id="services" class="reveal">
     <div class="container">
       <h2 class="reveal fade-right">Our Services</h2>
@@ -270,7 +254,7 @@
     </div>
   </section>
 
-  <!-- Why Choose Us (light gray + fade-up) -->
+  <!-- Why Choose Us -->
   <section id="why" class="reveal fade-up">
     <div class="container">
       <h2>Why Choose Us</h2>
@@ -287,7 +271,7 @@
     </div>
   </section>
 
-  <!-- Client Information & Service Request (fade-left) -->
+  <!-- Request -->
   <section id="request" class="reveal fade-left">
     <div class="container">
       <div class="form-card">
@@ -322,7 +306,7 @@
     </div>
   </section>
 
-  <!-- Contact (fade-up) -->
+  <!-- Contact -->
   <section id="contact" class="reveal fade-up">
     <div class="container" style="text-align:center;">
       <h2>Contact Us</h2>
@@ -333,16 +317,13 @@
       <p class="lead">📞💬 Need help? Connect with us — 24/7 support via call & chat.</p>
 
       <div class="socials">
-        <!-- WhatsApp (direct chat) -->
         <a href="https://wa.me/919840407627?text=Hi%20CrystalCore%2C%20I%27d%20like%20to%20know%20more%20about%20your%20services."
            title="WhatsApp" aria-label="WhatsApp" target="_blank" rel="noopener">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M20 3.9A10 10 0 0 0 3.4 17.4L2 22l4.7-1.2A10 10 0 1 0 20 3.9ZM12 20a8 8 0 1 1 0-16 8 8 0 0 1 0 16Zm4-5.7c-.2-.1-1-.5-1.1-.6s-.3-.1-.5.1c-.1.2-.6.6-.7.7-.1.1-.3.1-.5 0s-1-.4-1.9-1.2-1.4-1.8-1.5-2c-.1-.2 0-.3.1-.5l.3-.3c.1-.1.1-.2.2-.3.1-.1.1-.2.2-.3 0-.1 0-.2 0-.3s0-.3-.1-.4c0-.1-.5-1.2-.7-1.7-.2-.5-.4-.4-.5-.4h-.4c-.1 0-.3.1-.5.2-.2.2-.6.6-.6 1.4s.6 1.6.7 1.7c.1.2 1.2 1.9 2.8 3 1.6 1.1 2.7 1.3 3.1 1.4.4 0 .9 0 1.2-.1.3-.1 1-.5 1.1-.9.1-.4.1-.8.1-.9 0-.1-.2-.1-.4-.2Z"/></svg>
         </a>
-        <!-- Instagram -->
         <a href="https://www.instagram.com/yourhandle/" title="Instagram" aria-label="Instagram" target="_blank" rel="noopener">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7zm5 3.5a5.5 5.5 0 1 1 0 11 5.5 5.5 0 0 1 0-11zm0 2a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zM18 6.5a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>
         </a>
-        <!-- LinkedIn -->
         <a href="https://www.linkedin.com/company/your-company-slug/" title="LinkedIn" aria-label="LinkedIn" target="_blank" rel="noopener">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M6.94 8.75H4.06V20h2.88V8.75Zm.2-4.6a1.78 1.78 0 1 1-3.56 0 1.78 1.78 0 0 1 3.56 0ZM20 13.9c0-3.02-1.61-4.42-3.76-4.42-1.73 0-2.5.95-2.94 1.62V8.75H10.5c.04.95 0 11.25 0 11.25h2.8v-6.28c0-.34.02-.69.13-.93.29-.69.95-1.41 2.06-1.41 1.45 0 2.03 1.06 2.03 2.62V20H20v-6.1Z"/></svg>
         </a>
@@ -350,7 +331,7 @@
     </div>
   </section>
 
-  <!-- Footer (no animation) -->
+  <!-- Footer -->
   <footer>
     © 2025 CrystalCore Business Solutions — All Rights Reserved
   </footer>
@@ -360,31 +341,30 @@
     const form = document.getElementById("requestForm");
     const resp = document.getElementById("formResponse");
 
-    form.addEventListener("submit", async (e)=>{
+    // Your new Apps Script Web App URL (FormData-based)
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxv8pizrgn20TQ-HV_RnfpcmGqHeY2PTja76TBPdKbPEY6M1hnY4wKV3ozbk8oXgNiU/exec";
+
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
-      const data = {
-        name: form.name.value.trim(),
-        phone: form.phone.value.trim(),
-        email: form.email.value.trim(),
-        company: form.company.value.trim(),
-        message: form.message.value.trim()
-      };
       resp.textContent = "Sending...";
+
       try {
-        const res = await fetch("https://script.google.com/macros/s/AKfycbxKgwerB2PimhpP01wq4tl5Qk8jmqZUErzFSk7bVNM1c41lwCwUG2XyadKrRRHuPB9F5A/exec", {
-          method:"POST",
-          headers:{"Content-Type":"application/json"},
-          body: JSON.stringify(data)
+        const fd = new FormData(form);      // sends name, phone, email, company, message
+        fd.append("source", location.href);  // optional: where it came from
+
+        await fetch(SCRIPT_URL, {
+          method: "POST",
+          body: fd
         });
-        await res.json();
+
         resp.textContent = "✅ Thanks! Your request has been submitted.";
         form.reset();
-      } catch(err) {
+      } catch (err) {
         resp.textContent = "❌ Error submitting. Please try again.";
       }
     });
 
-    // ==== IntersectionObserver animations ====
+    // IntersectionObserver animations
     const revealEls = document.querySelectorAll('.reveal, .reveal-stagger');
     const io = new IntersectionObserver((entries, observer)=>{
       entries.forEach(entry=>{
